--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
   </div>
 
   <div id="modal" tabindex="-1"
-    class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 md:inset-0 h-modal md:h-full backdrop-blur-sm bg-black/20">
+    class="hidden overflow-y-auto overflow-x-hidden h-screen md:h-full fixed top-0 right-0 left-0 z-40 md:inset-0 h-modal  backdrop-blur-sm bg-black/20">
     <div class="relative p-4 w-full max-w-md h-full md:h-auto m-auto top-[10%]">
       <div class="relative bg-white rounded-lg shadow">
-        <button type="button" id="btn-close-modal"
-          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
+        <button type="button"
+          class="btn-close-modal absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center z-50"
           data-modal-toggle="popup-modal">
           <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
@@ -272,7 +272,7 @@
 
   <script src="js/jquery.js"></script>
   <script>
-    $("#btn-close-modal").click(function () {
+    $(".btn-close-modal").click(function () {
       $("#modal").addClass("hidden");
     });
 
